<?xml version="1.0"?>
<package>
  <name>openrtm_aist</name>
  <version>3.1.4</version>
  <description>The openrtm_aist package.

   Version was bumped from 1.1.0 when the package was catkinized and released into ROS buildfarm via bloom.
  </description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
  <author email="n-ando@aist.go.jp">Noriaki Ando</author>
  <license>EPL</license>
  <url type="website">http://ros.org/wiki/openrtm_aist</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>omniorb</build_depend>
  <run_depend>omniorb</run_depend>

  <export>
  </export>
</package>