<?xml version="1.0"?>
<package>
  <name>rtctree</name>
  <version>3.1.4</version>
  <description>The rtctree package.

   Version was bumped from 3.0.0 when the package was catkinized and released into ROS buildfarm via bloom.
  </description>

  <maintainer email="k-okada@jsk.t.u-toyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
  <author email="k-okada@jsk.t.u-toyo.ac.jp">Kei Okada</author>

  <license>EPL</license>
  <url type="website">http://ros.org/wiki/openrtm_tools</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export/>

</package>