<?xml version="1.0"?>
<package>
  <name>rtshell</name>
  <version>3.1.4</version>
  <description>The rtshell package

   Version was bumped from 3.0.0 when the package was catkinized and released into ROS buildfarm via bloom.
  </description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <license>EPL</license>
  <url type="website">http://ros.org/wiki/openrtm_tools</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>unzip</build_depend>

  <export/>
</package>