<?xml version="1.0"?>
<package>
  <name>rtsprofile</name>
  <version>3.1.5</version>

  <description>The rtsprofile package

   Version was bumped from 2.0.0 when the package was catkinized and released into ROS buildfarm via bloom.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei OKada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei OKada</author>

  <license>EPL</license>
  <url type="website">http://ros.org/wiki/openrtm_tools</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>unzip</build_depend>

  <export/>

</package>